Tree component refactoring (#465)
* changed render filter to async function, fixed eslint, :memo: CHANGELOG.md, README.md, created interface file

* :memo:

* :memo: link to packageDocumentation

* :wrench:

* Async render `iterate` typedef

* i-history initIndex fix

* upgrade content height recalculation at the initGeometry

* :memo: CHANGELOG.md bBottomSlide

* bMatryoshka renderFilter default value

* Matryoshka CHANGELOG.md

* :memo: project CHANGELOG.md

* waiting for animation frame, :memo: interface description

* :art: bMatryoshka

* change links to iItems fields

* Template refactoring, added demo theme

* Added matryoshka render tests

* Marked b-matryoshka as deprecated. Created b-tree instead

* :art:

* :art:

* :art:

* :art: extending

* :art: Folding test

* :art: rename const

* :art: tests

* Fixed fold slot

* More complex checking options

* Fix option checking

* Fix external renderFilter for nested items

* Added renderFilter test case, bTree tests improvements

* :memo: CHANGELOGs

* Added nestedRenderFilter property, :memo: README

* :memo: README chunks count

* nestedRenderFilter test

* :art:

* revert some bMatryoshka changes

* revert some bMatryoshka :memo:

* yet another revert

* change to getter getNestedItemProps

* :art:

* :pen: Improved doc

* :pen: Improved doc

* Fixed a typo

* TreeItem -> Item

* :art:

* :pen: Updated doc

* :art:

* :pen: Improved log

* iItems refactoring, deprecate old iItems methods and fields in bMatryoshka

* :memo: Docs, :art:

* :art:

* :art: bSlider refactoring in progress

* :art: bSlider refactoring in progress

* :art: bSlider refactoring + :memo: README, CHANGELOG

* :art: bSlider refactoring in progress. Fixed children blocks aligning, if them provided by slot in the scroll mode

* :memo:

* :whench: bTree tests, :art: core/component/traverse file header

* Fixed issues/400

* :ar

--- a/src/base/b-slider/b-slider_mode_scroll.styl
+++ b/src/base/b-slider/b-slider_mode_scroll.styl
@@ -22,8 +22,9 @@ b-slider_mode_scroll extends b-slider
 		width 100%
 		visibility hidden
 
-		pointer-events none
 		opacity 0
+
+		pointer-events none
 
 	/mode &__outer-view-wrapper
 		-webkit-overflow-scrolling touch
@@ -39,9 +40,14 @@ b-slider_mode_scroll extends b-slider
 
 	/mode &__view-content
 		white-space nowrap
+
+	/mode &__view-content
+	/mode &__view
 		width 100%
 
-	&__option
+	/mode &__view-content > *
+	/mode &__option
+	/mode &__item
 		display inline-block
 
 	/mode&_dynamic-height_false &__outer-view-wrapper
