--- a/src/base/b-slider/b-slider_mode_slide.styl
+++ b/src/base/b-slider/b-slider_mode_slide.styl
@@ -10,7 +10,12 @@ $p = {
 
 }
 
-b-slider_mode_slider extends b-slider
+b-slider_mode_slide extends b-slider
+	/mode &__view
+		display flex
+		size 100%
+		overflow hidden
+
 	/mode &__view-content
 		--offset 0px
 		--transform 0px
@@ -24,6 +29,9 @@ b-slider_mode_slider extends b-slider
 		@media (prefers-reduced-motion reduce)
 			transition none
 			transform translate3d(calc(0px - var(--offset)), 0, 0)
+
+	/mode &__view-content > *
+		flex-shrink 0
 
 	/mode&_swipe_true &__view-content
 		transition none
