Now the component implements the `iItems` trait

--- a/src/base/b-list/b-list.styl
+++ b/src/base/b-list/b-list.styl
@@ -26,14 +26,14 @@ b-list extends i-data
 	&__cell
 		display flex
 
-	&__item
+	&__el
 	&__link
 		position relative
 
 	&__link:active
 		{$p.onActive}
 
-	&__item
+	&__el
 	&__link_progress_true &__link-progress
 		display block
 
