--- a/src/base/b-list/b-list.styl
+++ b/src/base/b-list/b-list.styl
@@ -40,5 +40,5 @@ b-list extends i-data
 	&__link-progress
 		display none
 
-	&_hide-labels &__link-text
+	&_hide-labels &__link-value
 		display none
