Formatting plugins improvements

--- a/src/global/g-def/funcs/ds.styl
+++ b/src/global/g-def/funcs/ds.styl
@@ -50,7 +50,7 @@ i($name, $params, $opts)
 		$align = $opts
 
 	if type($params) == "object"
-		$imgPath = formatURL({query: $params, pathname: $imgPath})
+		$imgPath = formatURL({href: $imgPath, query: $params})
 
 	else if type($params) == "ident"
 		$repeat = $params
