:art: optional params for i()

--- a/src/global/g-def/funcs/ds.styl
+++ b/src/global/g-def/funcs/ds.styl
@@ -37,7 +37,7 @@ c($kit, $id = null, $reserved = false, $base = false)
  * i('24/foo', {stroke: 'black #qwe'}, left)
  * ```
  */
-i($name, $params, $opts)
+i($name, $params = null, $opts = null)
 	$repeat = no-repeat
 	$align = center
 	$imgPath = join(".", $name svg)
