--- a/src/global/g-def/funcs/ds.styl
+++ b/src/global/g-def/funcs/ds.styl
@@ -25,7 +25,7 @@ c($kit, $id = null, $reserved = false, $base = false)
  *
  * @param {string} $name
  * @param {object|ident=} [$params] - transform parameters object or a background repeating rule
- * @param {object|ident=} [$opts] - background options object or background alignment rule
+ * @param {object|ident=} [$opts] - background options object or a background alignment rule
  *
  * @see https://github.com/JetBrains/svg-mixer/tree/master/packages/svg-transform-loader#how-to-pass-transform-parameters
  *
