stylus ROOT_GLOBAL_NAME

--- a/src/global/g-def/const.styl
+++ b/src/global/g-def/const.styl
@@ -22,3 +22,8 @@ BASE_FONT_PATTERN = '"Open Sans%t", Arial, sans-serif'
  * Base system font
  */
 BASE_FONT = getGlobalFont()
+
+/**
+ * Global name of the root component
+ */
+ROOT_GLOBAL_NAME = getRootGlobalName()
