Added module to manage themes, removed ROOT_GLOBAL_NAME variable

--- a/src/global/g-def/g-def.styl
+++ b/src/global/g-def/g-def.styl
@@ -23,6 +23,6 @@
 
 //#if runtime has includeThemes
 for name in includedThemes()
-	html.{ROOT_GLOBAL_NAME}_theme_{name}
+	html[data-theme={"%s" % name}]
 		interpolate-props(getDSVariables(name), false)
 //#endif
