:art: names and more by review

--- a/src/global/g-def/g-def.styl
+++ b/src/global/g-def/g-def.styl
@@ -22,7 +22,7 @@
 //#endif
 
 //#if runtime has includeThemes
-for name in includedThemes()
+for name in availableThemes()
 	html[data-theme={"%s" % name}]
 		interpolate-props(getDSVariables(name), false)
 //#endif
