--- a/src/global/g-def/funcs/ds.styl
+++ b/src/global/g-def/funcs/ds.styl
@@ -7,7 +7,7 @@
  */
 
 /**
- * Returns a color from the global kits or from a design system
+ * Returns a color from the global kits or from the design system
  *
  * @param {string} $kit
  * @param {number|string} [$id]
