--- a/src/global/g-def/funcs/ds.styl
+++ b/src/global/g-def/funcs/ds.styl
@@ -7,7 +7,7 @@
  */
 
 /**
- * Returns a color from the global kits or from Design System
+ * Returns a color from the global kits or from the design system
  *
  * @param {string} $kit
  * @param {number|string} [$id]
@@ -15,8 +15,10 @@
  * @param {boolean=} [$base]
  */
 c($kit, $id = null, $reserved = false, $base = false)
-	if getDSOptions("colors")
-		return getDSColor($kit, $id)
+	if getDSValue("colors")
+		$color = getDSColor($kit, $id)
+		$value = type($color) == "string" ? convert($color) : $color
+		return $value
 
 	getGlobalColor($kit, $id || null, $reserved, $base)
 
@@ -63,18 +65,18 @@ i($name, $params = null, $opts = null)
 		size unit(convert($chunks[0]), "px")
 
 /**
- * Returns text style rules from Design System styles by the specified name
+ * Returns text style rules from design system styles by the specified name
  * @param {string} $name - text style name
  */
 t($name)
 	$name = replaceByRegExp($name, "[ \/]", "-", "g")
-	$obj = getDSOptions("text." + $name)
+	$obj = getDSTextStyles($name)
 
 	if $obj
 		interpolate-props($obj)
 
 /**
- * Returns a border-radius rule from Design System styles by the specified name and position
+ * Returns a border-radius rule from design system styles by the specified name and position
  *
  * @param {string} $name - border-radius DS name
  * @param {string} [$pos] - %s tokens-styled string for multiple border-radius values
@@ -83,36 +85,34 @@ t($name)
  * r(big, '$s 0 $s') -> border-radius 16px 0 16px
  */
 r($name, $pos = null)
-	$val = getDSOptions("rounding." + $name)
+	$val = getDSValue("rounding", $name)
 
 	if $val
 		if $pos
 			border-radius convert(replace("%s", s("%s", $val), $pos))
 
 		else
-			border-radius $val
+			border-radius type($val) == "string" ? convert($val) : $val
 
 /**
  * Generates necessary rules for the specified component options and factory.
- * The function is used to integrate a Design System.
+ * The function is used to integrate a design system.
  *
  * @param $p
  * @param $fn
  */
 generateRules($p, $fn)
 	if !$p.skipDsInheritance
-		//#if runtime has ds-vars
-		$fn($p.__vars__)
-		//#endif
+		$fn($p.values)
 
-		//#unless runtime has ds-vars
-		$fn($p)
-		//#endunless
-
-		//#if runtime has ds-diff
+		//#if runtime has ds/diff
 		&_diff_true
 			$fn($p.__diffVars__)
 
 		&_diff_false
-			$fn($p.__vars__)
+			$fn($p.values)
 		//#endif
+
+		return
+
+	return
