--- a/src/form/b-input/b-input.styl
+++ b/src/form/b-input/b-input.styl
@@ -6,7 +6,7 @@
  * https://github.com/V4Fire/Client/blob/master/LICENSE
  */
 
-@import "super/i-input/i-input.styl"
+@import "super/i-input-text/i-input-text.styl"
 @import "traits/i-width/i-width.styl"
 
 $p = {
@@ -16,7 +16,7 @@ $p = {
 	visibleHelpers: true
 }
 
-b-input extends i-input
+b-input extends i-input-text
 	// @stlint-disable
 	i-width({helpers: $p.widthHelpers})
 	// @stlint-enable
