Fixed ESLint warnings

--- a/src/form/b-textarea/b-textarea.styl
+++ b/src/form/b-textarea/b-textarea.styl
@@ -6,13 +6,13 @@
  * https://github.com/V4Fire/Client/blob/master/LICENSE
  */
 
-@import "form/b-input/b-input.styl"
+@import "super/i-input-text/i-input-text.styl"
 
 $p = {
 
 }
 
-b-textarea extends b-input
+b-textarea extends i-input-text
 	&__super-wrapper
 	&__root-wrapper
 		background inherit
