Review doc style

--- a/src/global/g-def/funcs/ds.styl
+++ b/src/global/g-def/funcs/ds.styl
@@ -76,7 +76,7 @@ t($name)
 		interpolate-props($obj)
 
 /**
- * Returns a border-radius rule from design system styles by the specified name and position
+ * Returns a `border-radius` rule from design system styles by the specified name and position
  *
  * @param {string} $name - border-radius DS name
  * @param {string} [$pos] - %s tokens-styled string for multiple border-radius values
