--- a/src/global/g-def/funcs/font.styl
+++ b/src/global/g-def/funcs/font.styl
@@ -23,5 +23,5 @@ getGlobalFont($type = "")
  * @param {string} [$type]
  */
 execFontPattern($type = "")
-	warn("This function is deprecated. Please, use getGlobalFont as an alternative.")
+	warn("`execFontPattern` function is deprecated. Please, use `getGlobalFont` as an alternative.")
 	getGlobalFont($type)
