--- a/src/global/g-def/funcs/img.styl
+++ b/src/global/g-def/funcs/img.styl
@@ -12,8 +12,8 @@
 $IMG = {}
 
 /**
- * Load an image by the specified URL and saves it to the global cache.
- * This function is useful to avoid the duplication of code when we use CSS sprites.
+ * Loads an image by the specified URL and saves it to the global cache.
+ * This function is useful to avoid the duplication of code when using CSS sprites.
  *
  * @param {string} $img
  * @param {boolean=} [$isDsAsset]
