--- a/src/global/g-hint/g-hint.styl
+++ b/src/global/g-hint/g-hint.styl
@@ -18,23 +18,23 @@ $p = {
 	hidden: false,
 
 	/**
-	 * Selector to show a hint container or false
+	 * Selector to show a hint container or `false`
 	 */
 	showOn: false,
 
 	/**
-	 * Name of an attribute that contains data to show or false
+	 * Name of an attribute that contains data to show or `false`
 	 */
 	dataAttr: false
 
 	/**
-	 * Selector to a hint data container: it is used with hints that based on valued from attributes.
+	 * Selector to a hint data container: it is used with hints that based on values from attributes.
 	 * Basically, you don't need to change this value.
 	 */
 	content: "&::after"
 
 	/**
-	 * Z-index position to show a data container
+	 * `z-index` position to show a data container
 	 */
 	zIndexPos: overall
 
@@ -49,18 +49,18 @@ $p = {
 	}
 
 	/**
-	 * Selector of the "hint-arrow" to show.
+	 * Selector of the `hint-arrow` to show.
 	 * Basically, you don't need to change this value.
 	 */
 	arrow: "&::before"
 
 	/**
-	 * Size of the "hint-arrow" to show: vertical, horizontal
+	 * Size of the `hint-arrow` to show: vertical, horizontal
 	 */
 	arrowSize: 0.7rem 0.4rem
 
 	/**
-	 * Dictionary with extra styles of the "hint-arrow"
+	 * Dictionary with extra styles of the `hint-arrow`
 	 */
 	arrowStyles: {
 
