--- a/src/form/b-input/b-input.styl
+++ b/src/form/b-input/b-input.styl
@@ -24,12 +24,11 @@ b-input extends i-input-text
 	display inline-block
 
 	&__root-wrapper
-	&__super-wrapper
 	&__wrapper
 		display flex
 		width 100%
 
-	&__super-wrapper
+	&__wrapper
 		cursor text
 
 	&__cell
@@ -73,9 +72,6 @@ b-input extends i-input-text
 		pointer-events none
 
 	&__valid-status
-		display none
-
-	&_show-error_true &__error-box
 		display none
 
 	&_focused_true&_empty_false:not(&_readonly_true) &__clear
