--- a/src/super/i-input-text/i-input-text.styl
+++ b/src/super/i-input-text/i-input-text.styl
@@ -7,9 +7,13 @@
  */
 
 @import "super/i-input/i-input.styl"
+@import "traits/i-width/i-width.styl"
 
 $p = {
-
+	widthHelpers: false
 }
 
 i-input-text extends i-input
+	// @stlint-disable
+	i-width({helpers: $p.widthHelpers})
+	// @stlint-enable
