--- a/src/form/b-input/b-input-ds.styl
+++ b/src/form/b-input/b-input-ds.styl
@@ -56,7 +56,7 @@ b-input
 					for $key, $value in $sizes
 						&_{$key}
 							& ^[0]
-								&__input-cont
+								&__input-wrapper
 									$offset = getField($value, offset)
 
 									if $offset
