--- a/src/form/b-select/b-select-ds.styl
+++ b/src/form/b-select/b-select-ds.styl
@@ -132,12 +132,12 @@ b-select
 			background lighten($p.optionSelectedBackgroundColor, 30%)
 
 		&_selected_true
+		&_marked_true
 			background $p.optionSelectedBackgroundColor
 
 			&:hover
 				background @background
 
 	&__dropdown
-		display block
 		max-height 160px
 		overflow auto
