The component was renamed `b-input-birthday` -> `b-select-birthday` Fixed ESLint warnings

--- a/src/form/b-select-birthday/b-select-birthday.styl
+++ b/src/form/b-select-birthday/b-select-birthday.styl
@@ -14,7 +14,7 @@ $p = {
 	visibleHelpers: true
 }
 
-b-input-birthday extends i-input
+b-select-birthday extends i-input
 	// @stlint-disable
 	i-width({helpers: $p.widthHelpers})
 	// @stlint-enable
