--- a/src/form/b-select-date/b-select-date.styl
+++ b/src/form/b-select-date/b-select-date.styl
@@ -14,7 +14,7 @@ $p = {
 	visibleHelpers: true
 }
 
-b-select-birthday extends i-input
+b-select-date extends i-input
 	// @stlint-disable
 	i-width({helpers: $p.widthHelpers})
 	// @stlint-enable
