Added a new `file` type

--- a/src/form/b-button/b-button.styl
+++ b/src/form/b-button/b-button.styl
@@ -62,6 +62,9 @@ b-button extends i-data
 		if $p.width
 			width $p.width
 
+	&__file
+		display none
+
 	&__dropdown &__dropdown-content
 		padding 0
 
