--- a/src/dummies/b-dummy-module-loader/b-dummy-module1/b-dummy-module1.styl
+++ b/src/dummies/b-dummy-module-loader/b-dummy-module1/b-dummy-module1.styl
@@ -6,10 +6,10 @@
  * https://github.com/V4Fire/Client/blob/master/LICENSE
  */
 
-@import "super/i-dynamic-page/i-dynamic-page.styl"
+@import "super/i-data/i-data.styl"
 
 $p = {
 
 }
 
-p-v4-dynamic-page-2 extends i-dynamic-page
+b-dummy-module1 extends i-data
