--- a/src/pages/p-v4-dynamic-page3/p-v4-dynamic-page3.styl
+++ b/src/pages/p-v4-dynamic-page3/p-v4-dynamic-page3.styl
@@ -6,10 +6,10 @@
  * https://github.com/V4Fire/Client/blob/master/LICENSE
  */
 
-@import "super/i-data/i-data.styl"
+@import "super/i-dynamic-page/i-dynamic-page.styl"
 
 $p = {
 
 }
 
-b-dummy-module-1 extends i-data
+p-v4-dynamic-page3 extends i-dynamic-page
