--- a/src/dummies/b-dummy-module-loader/b-dummy-module2/b-dummy-module2.styl
+++ b/src/dummies/b-dummy-module-loader/b-dummy-module2/b-dummy-module2.styl
@@ -6,5 +6,10 @@
  * https://github.com/V4Fire/Client/blob/master/LICENSE
  */
 
-package('b-dummy-module-1')
-	.extends('i-data');
+@import "super/i-data/i-data.styl"
+
+$p = {
+
+}
+
+b-dummy-module2 extends i-data
