--- a/src/base/b-slider/b-slider_mode_slide.styl
+++ b/src/base/b-slider/b-slider_mode_slide.styl
@@ -22,6 +22,9 @@ b-slider_mode_slide extends b-slider
 
 		transition transform 0.3s
 
+		@media (prefers-reduced-motion reduce)
+			transition none
+
 	/mode &__view-content > *
 		flex-shrink 0
 
