--- a/src/form/b-input/b-input.styl
+++ b/src/form/b-input/b-input.styl
@@ -78,10 +78,10 @@ b-input extends i-input-text
 		position relative
 		z-index 2
 
-	&__additional-phrase
+	&__text-hint
 		position absolute
 		left 0
 		z-index 1
 
-	&_empty_true &__additional-phrase
+	&_empty_true &__text-hint
 		display none
