EDADEALCORECASE-1350: use span instead of input in textHint

--- a/src/form/b-input/b-input.styl
+++ b/src/form/b-input/b-input.styl
@@ -74,13 +74,19 @@ b-input extends i-input-text
 		display block
 		visibility visible
 
-	&__input:first-child
+	&__input
 		position relative
 		z-index 2
 
 	&__text-hint
+		width 100%
 		position absolute
 		left 0
+		overflow hidden
+		margin 0
+		text-overflow ellipsis
+		border 0
+		background transparent
 		z-index 1
 
 	&_empty_true &__text-hint
