--- a/src/form/b-input/b-input.styl
+++ b/src/form/b-input/b-input.styl
@@ -31,6 +31,7 @@ b-input extends i-input-text
 
 	&__input-wrapper
 		width 100%
+		position relative
 
 	&__input
 		width 100%
@@ -72,3 +73,24 @@ b-input extends i-input-text
 	&_focused_true&_empty_false:not(&_readonly_true) &__clear
 		display block
 		visibility visible
+
+	&__input
+		position relative
+		z-index 2
+
+	&__text-hint
+		width 100%
+		margin 0
+
+		position absolute
+		left 0
+		z-index 1
+
+		overflow hidden
+		text-overflow ellipsis
+
+		border 0
+		background transparent
+
+	&_empty_true &__text-hint
+		display none
