fix textHint display

--- a/src/form/b-input/b-input.styl
+++ b/src/form/b-input/b-input.styl
@@ -88,6 +88,7 @@ b-input extends i-input-text
 
 		overflow hidden
 		text-overflow ellipsis
+		white-space nowrap
 
 		border 0
 		background transparent
