fix checkbox styles

--- a/src/form/b-checkbox/b-checkbox.styl
+++ b/src/form/b-checkbox/b-checkbox.styl
@@ -17,13 +17,14 @@ b-checkbox extends i-input
 	contain paint
 	position relative
 
+	&__wrapper, &__checkbox, &__label
+		cursor pointer
+
 	&__wrapper
 		display flex
-		cursor pointer
 
 	&__checkbox
 		display block
-		cursor pointer
 
 	&__label
 		user-select none
