--- a/src/form/b-checkbox/b-checkbox.styl
+++ b/src/form/b-checkbox/b-checkbox.styl
@@ -17,7 +17,9 @@ b-checkbox extends i-input
 	contain paint
 	position relative
 
-	&__wrapper, &__checkbox, &__label
+	&__wrapper,
+	&__checkbox,
+	&__label
 		cursor pointer
 
 	&__wrapper
