BREAKING CHANGE: renamed the global `hide-if-offline` attribute to `data-hide-if-offline`

--- a/src/super/i-static-page/i-static-page.styl
+++ b/src/super/i-static-page/i-static-page.styl
@@ -34,3 +34,6 @@ i-static-page extends i-page
 	if $p.globalIconHelpers
 		/.g-icon
 			extends($gIcon)
+
+	&-online-false [data-hide-if-offline="true"]
+		display none
